Improve test setup

--- a/meta/test_install_nix/Dockerfile
+++ b/meta/test_install_nix/Dockerfile
@@ -1,13 +1,14 @@
 # Use Ubuntu base image
 FROM ubuntu:latest
 
-ENV container docker
-ENV DEBIAN_FRONTEND noninteractive
+ENV container=docker
+ENV DEBIAN_FRONTEND=noninteractive
 
 # Install required packages
 RUN apt-get update && \
     apt-get install -y \
     curl \
+    git \
     sudo \
     systemd \
     systemd-sysv \
@@ -18,16 +19,19 @@ RUN apt-get update && \
 RUN useradd -m tester && \
     echo "tester ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/tester
 
-# Set up zsh configuration
-RUN cp /etc/zsh/newuser.zshrc.recommended /home/tester/.zshrc && \
-    chown -R tester:tester /home/tester/.zshrc
-
-# Set zsh as default shell for tester
-RUN chsh -s /usr/bin/zsh tester
-
 # Set up autologin for tester user
 RUN mkdir -p /etc/systemd/system/console-getty.service.d/
 COPY override.conf /etc/systemd/system/console-getty.service.d/
+
+# Set up zsh configuration
+RUN cp /etc/zsh/newuser.zshrc.recommended /home/tester/.zshrc && \
+    chown -R tester:tester /home/tester/.zshrc
+USER tester
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+USER root
+
+# Set zsh as default shell for tester
+RUN chsh -s /usr/bin/zsh tester
 
 WORKDIR /workspace
 
